<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="login_message">Login</string>
    <string name="login_name">login name</string>
    <string name="password_message">Password</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="dialog_title">Finish activity</string>
    <string name="dialog_message">Would you like to finish activity?</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="start_chat">Start Chat</string>
    <string name="list_items">List Items</string>
    <string name="send">Send</string>
    <string name="prompt_title">Do you want to go back?</string>
    <string name="test_toolbar_text">Test Toolbar</string>
    <string name="SnackBarInit">Option 1 was selected</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="weather_forecast">Weather Forecast</string>

    <string name="lorem_ipsum">lorum ipsum</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="cities">
        <item>toronto</item>
        <item>ottawa</item>
        <item>vancouver</item>
    </string-array>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="TestToolbarButtonText">Test Toolbar</string>
    <string name="BuilderTitle">Do you want to go back?</string>
</resources>